Release the paused AOT/artifact work and the diffusion bootstrap cache
Owner released the previous session's paused working tree (wind-down
b8c39fdbb). This is the AOT + artifact-digest work carrying a measured
10,293 -> 3,886 ms boot improvement, plus the host eval/invoke/session
changes and the diffusion bootstrap cache that moved out of seon.eval.

Build artifacts (.shadow-cljs-*, out-*) and reference-code/http-kit are
left untracked deliberately.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>